# ocaml-challenge

./: README.md
.devcontainer/: devcontainer.json
2/option_seq/: dune-project
2/option_seq/_build/: .db  .digest-db  log
2/option_seq/_build/default/: option_seq.dune-package  option_seq.install
2/option_seq/_build/default/lib/: option_seq.cma  option_seq.cmxa  option_seq.cmxs  option_seq.ml
2/option_seq/_build/default/lib/.merlin-conf/: lib-option_seq
2/option_seq/_build/default/lib/.option_seq.objs/byte/: option_seq.cmi  option_seq.cmo  option_seq.cmt
2/option_seq/_build/default/lib/.option_seq.objs/native/: option_seq.cmx
2/option_seq/_build/default/test/: test_option_seq.cmxa  test_option_seq.pp.ml
2/option_seq/_build/default/test/.merlin-conf/: lib-test_option_seq
2/option_seq/_build/default/test/.test_option_seq.inline-tests/: partitions-best
2/option_seq/_build/default/test/.test_option_seq.inline-tests/.test_option_seq.inline-tests.eobjs/byte/: dune__exe__Inline_test_runner_test_option_seq.cmi  dune__exe__Inline_test_runner_test_option_seq.cmo  dune__exe__Inline_test_runner_test_option_seq.cmt
2/option_seq/_build/default/test/.test_option_seq.objs/byte/: test_option_seq.cmi  test_option_seq.cmo  test_option_seq.cmt
2/option_seq/_build/default/test/.test_option_seq.objs/native/: test_option_seq.cmx
2/option_seq/_build/install/default/lib/option_seq/: META  dune-package  opam
2/option_seq/lib/: dune  option_seq.ml
2/option_seq/test/: dune  test_option_seq.ml
tutorials/: README.md  install-ocaml.md  setup-git.md  using-utop.md
(+1485 files in other folders)
